--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,23 +1,46 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_with model: @customer, url: customer_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="field">名前
+      <%= f.label :first_name, "(姓)" %>
+      <%= f.text_field :first_name %>
+      <%= f.label :last_name, "(名)" %>
+      <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">フリガナ
+      <%= f.label :first_name_kana, "(セイ)" %>
+      <%= f.text_field :first_name_kana %>
+      <%= f.label :last_name_kana, "(メイ)" %>
+      <%= f.text_field :last_name_kana %>
+  </div>
+
+  <div class="field">メールアドレス
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field">郵便番号
+    <%= f.text_field :postal_code %>
+  </div>
+
+  <div class="field">住所
+    <%= f.text_area :address %>
+  </div>
+
+  <div class="field">電話番号(ハイフンなし)
+    <%= f.text_field :telephone_number %>
+  </div>
+
+
+  <div class="field">パスワード(6文字以上)
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="field">パスワード(確認用)
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
