--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ec197d3cc7.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -19,28 +19,44 @@
             <div class="col mt-5">
             <ul class="nav">
               <li class="nav-item">
-                <h2>
-                  <%= link_to "Logo", root_path, style: "text-decoration: none;", style: "color:black;" %>
-                </h2>
+                  <button type="button" class="btn btn-outline-secondary">
+                    <h2><%= link_to "Logo", root_path, style: "text-decoration: none;", style: "color:black;" %></h2>
+                  </button>
               </li>
             </ul>
             </div>
 
-            <div class="col mt-2">
+            <div class="col mt-3">
             <ul class="nav justify-content-end">
               <li class="nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "About", about_path, style: "text-decoration: none;", style: "color:black;" %>
+              　</button>
+              </li>
+              <li class="nav-item ">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "商品一覧", items_path, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "新規登録", new_customer_registration_path, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "ログイン", new_customer_session_path, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
 
               </li>
               <li class="nav-item">
-                 <a class="nav-link" href="#">Link</a>
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
+
             </ul>
+
             </div>
           </div>
         </div>
