--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,4 @@
-<h1>about</h1>
+<h1 class="text-center mt-5"><b>About</b></h1>
+<h4 class="text-center mt-5"><b>ながのCAKEは全国発送可能なケーキ屋さんです。<br>お子様からお年寄りの方までお召し上がりいただけるよう、<br>様々なバリエーションをご用意しております。<br>また、全国へ発送可能ですので｢いつ｣でも｢どこ｣でもご注文いただけます。<br>ぜひご注文ください。</b></h4>
+
+<%= image_tag "nagano_cake/about_image.jpg", class: "img-fluid rounded mx-auto mt-3 d-block", alt: "sample_image" %>
