--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,3 @@
-<h1>Top</h1>
+<%= image_tag "nagano_cake/top_image.jpg", class: "img-fluid rounded mx-auto mt-3 d-block", alt: "sample_image" %>
+
+<div class="col-6 border mx-auto mt-5 py-5 border-dark text-center"><p><b>ようこそ、ながのCAKEへ!<br>このサイトは、ケーキ販売のECサイトになります。<br>会員でない方も商品の閲覧はできますが、<br>購入には会員登録が必要になります。</b></p></div>
