--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,20 +25,58 @@
               </li>
             </ul>
             </div>
-
             <div class="col mt-3">
             <ul class="nav justify-content-end">
-              <li class="nav-item">
+              <li><p class="me-5 mt-5">ようこそ、<%= current_customer.first_name %>さん!</p></li>
+              <li class="me-5 nav-item">
                 <button type="button" class="btn btn-outline-secondary">
-                  <%= link_to "About", about_path, style: "text-decoration: none;", style: "color:black;" %>
+                  <%= link_to "マイページ", customer_path(current_customer.id), style: "text-decoration: none;", style: "color:black;" %>
               　</button>
               </li>
-              <li class="nav-item ">
+              <li class="me-5 nav-item">
                 <button type="button" class="btn btn-outline-secondary">
                   <%= link_to "商品一覧", items_path, style: "text-decoration: none;", style: "color:black;" %>
                 </button>
               </li>
+              <li class="me-5 nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "カート", cart_items_path, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
+              </li>
               <li class="nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>
+      <% else %>
+      　<div class="container-fluid">
+          <div class="row">
+            <div class="col mt-5">
+            <ul class="nav">
+              <li class="nav-item">
+                  <button type="button" class="btn btn-outline-secondary">
+                    <h2><%= link_to "Logo", root_path, style: "text-decoration: none;", style: "color:black;" %></h2>
+                  </button>
+              </li>
+            </ul>
+            </div>
+            <div class="col mt-3">
+            <ul class="nav justify-content-end">
+              <li class="me-5 nav-item">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "About", about_path, style: "text-decoration: none;", style: "color:black;" %>
+              　</button>
+              </li>
+              <li class="me-5 nav-item ">
+                <button type="button" class="btn btn-outline-secondary">
+                  <%= link_to "商品一覧", items_path, style: "text-decoration: none;", style: "color:black;" %>
+                </button>
+              </li>
+              <li class="me-5 nav-item">
                 <button type="button" class="btn btn-outline-secondary">
                   <%= link_to "新規登録", new_customer_registration_path, style: "text-decoration: none;", style: "color:black;" %>
                 </button>
@@ -47,20 +85,11 @@
                 <button type="button" class="btn btn-outline-secondary">
                   <%= link_to "ログイン", new_customer_session_path, style: "text-decoration: none;", style: "color:black;" %>
                 </button>
-
               </li>
-              <li class="nav-item">
-                <button type="button" class="btn btn-outline-secondary">
-                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, style: "text-decoration: none;", style: "color:black;" %>
-                </button>
-              </li>
-
             </ul>
-
             </div>
           </div>
         </div>
-      <% else %>
       <% end %>
     </header>
     <main>
