--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @customer, url: customer_registration_path do |f| %>
+<%= form_with model: @customer do |f| %>
 <%= render "public/shared/error_messages", resource: resource %>
 
   <h4 class="p-3 mb-2">
@@ -57,7 +57,7 @@
   <div class="mb-3 row">
     <label class="col-2 col-form-label">電話番号(ハイフンなし)</label>
     <div class="col-sm-4">
-      <%= f.text_field :telephone_numbe, class: "form-control", placeholder: "0000000000" %>
+      <%= f.text_field :telephone_number, class: "form-control", placeholder: "0000000000" %>
     </div>
   </div>
 
@@ -86,7 +86,9 @@
 
 <% end %>
 
-  <h4 class="p-3 mb-2 text-center col-3">
+  <h4 class="p-3 mb-2">
     <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;既に登録済みの方&nbsp;&nbsp;&nbsp;</b></span>
   </h4>
-  <h6 class="text-center col-4"><%= link_to "こちら", new_customer_session_path %>からログインしてください</h6>
+  <h6 class="text-center col-4"><%= link_to "こちら", new_customer_session_path %>からログインしてください。</h6>
+
+
