[Add] customer mypage create

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <li><p class="me-5 mt-5">ようこそ、<%= current_customer.first_name %>さん!</p></li>
               <li class="me-5 nav-item">
                 <button type="button" class="btn btn-outline-secondary">
-                  <%= link_to "マイページ", customer_path(current_customer.id), style: "text-decoration: none;", style: "color:black;" %>
+                  <%= link_to "マイページ", customer_path, style: "text-decoration: none;", style: "color:black;" %>
               　</button>
               </li>
               <li class="me-5 nav-item">
