--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,65 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<div class="container-fluid">
+  <div class="row">
+    <h4 class="p-3 mb-2 mt-5 col-4 text-center">
+      <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;マイページ&nbsp;&nbsp;&nbsp;</b></span>
+    </h4>
+  </div>
+
+  <div class="row ms-4 mb-3">
+    <div class="col-2">
+      <h3>登録情報</h3>
+    </div>
+    <div class="col-1 me-5">
+      <%= link_to "編集する", edit_customer_path, class: "btn btn-success" %>
+    </div>
+  </div>
+
+  <div class="row ms-4">
+    <div class="col-7">
+      <table class="table table-bordered">
+        <tbody>
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">名前</th>
+            <td style="border: 1px solid black;"><%= current_customer.first_name %>&nbsp;&nbsp;&nbsp;&nbsp;<%= current_customer.last_name %></td>
+          </tr>
+
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">カナ</th>
+            <td style="border: 1px solid black;"><%= current_customer.first_name_kana %>&nbsp;&nbsp;&nbsp;&nbsp;<%= current_customer.last_name_kana %></td>
+          </tr>
+
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">郵便番号</th>
+            <td style="border: 1px solid black;"><%= current_customer.postal_code %></td>
+          </tr>
+
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">住所</th>
+            <td style="border: 1px solid black;"><%= current_customer.address %></td>
+          </tr>
+
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">電話番号</th>
+            <td style="border: 1px solid black;"><%= current_customer.telephone_number %></td>
+          </tr>
+
+          <tr>
+            <th scope="row" class="col-3 table-active" style="border: 1px solid black;">メールアドレス</th>
+            <td style="border: 1px solid black;"><%= current_customer.email %></td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="row ms-4 mt-4">
+    <div class="col-2">
+      <h3>配送先</h3>
+    </div>
+    <div class="col-3 me-5">
+      <%= link_to "一覧を見る", deliveries_path, class: "btn btn-primary" %>
+    </div>
+  </div>
+
+</div>
