--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,84 @@
-<h1>Public::Customers#edit</h1>
-<p>Find me in app/views/public/customers/edit.html.erb</p>
+<div class="container-fluid">
+  <div class="row">
+    <h4 class="p-3 mb-2 mt-5 col-4 text-center">
+      <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;会員情報編集&nbsp;&nbsp;&nbsp;</b></span>
+    </h4>
+  </div>
+</div>
+
+<%= form_with model: @customer, url: update_customer_path(@customer), method: :patch do |f| %>
+
+<div class="mb-3 row">
+    <label class="col-2 col-form-label">氏名</label>
+    <div class="col-sm-6">
+      <div class="d-flex">
+        <div>(姓)
+          <%= f.text_field :first_name, class: "form-control"%>
+        </div>
+        <div class="col-4">(名)
+          <%= f.text_field :last_name, class: "form-control"%>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-2 col-form-label">フリガナ</label>
+    <div class="col-sm-6">
+      <div class="d-flex">
+        <div>(セイ)
+          <%= f.text_field :first_name_kana, class: "form-control"%>
+        </div>
+        <div class="col-4">(メイ)
+          <%= f.text_field :last_name_kana, class: "form-control"%>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-2 col-form-label">メールアドレス</label>
+    <div class="col-sm-4">
+      <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email"%>
+    </div>
+  </div>
+
+   <div class="mb-3 row">
+    <label class="col-2 col-form-label">郵便番号</label>
+    <div class="col-sm-4">
+      <%= f.text_field :postal_code, class: "form-control"%>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-2 col-form-label">住所</label>
+    <div class="col-sm-8">
+      <%= f.text_area :address, class: "form-control"%>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-2 col-form-label">電話番号(ハイフンなし)</label>
+    <div class="col-sm-4">
+      <%= f.text_field :telephone_number, class: "form-control"%>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div class="col-7 text-center">
+      <%= f.submit "編集内容を保存", class: "btn btn-success btn-lg col-sm-5" %>
+    </div>
+    <div class="col-4">
+      <%= link_to "退会する", confirm_customer_path, class: "btn btn-danger col-sm-5" %>
+    </div>
+
+  <div class="mb-3 row">
+    <div class="col-7">
+
+    </div>
+    <div class="col-4">
+
+    </div>
+  </div>
+
+  <% end %>
