--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Customers#confirm</h1>
-<p>Find me in app/views/public/customers/confirm.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col text-center my-4">
+      <h4>本当に退会しますか?</h4>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col text-center mb-4">
+      <p>退会すると、会員登録情報や<br>これまでの購入履歴が閲覧できなくなります。<br>退会する場合は、｢退会する｣をクリックしてください。</p>
+    </div>
+  </div>
+
+  <%= form_with model: @customer, url: withdraw_customer_path, method: :patch do |f| %>
+
+  <div class="row">
+    <div class="col text-center">
+      <%= link_to "退会しない", customer_path(current_customer), class: "btn btn-primary col-2 me-4" %>
+      <%= f.submit "退会する", class: "btn btn-danger col-2" %>
+    </div>
+  </div>
+
+  <% end %>
+
+</div>
