--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<div class="container">
+  <h4 class="p-3 mb-2 ms-5 col">
+  <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;商品一覧&nbsp;&nbsp;&nbsp;</b></span>
+  </h4>
+  <div class="row justify-content-center mt-5">
+    <div class="col-sm-8">
+      <table class="table">
+        <thead class="table-light">
+          <tr>
+            <th scope="col">商品ID</th>
+            <th scope="col">商品名</th>
+            <th scope="col">税抜価格</th>
+          </tr>
+        </thead>
+        <% @items.each do |item| %>
+        <tbody class="table-group-divider">
+          <tr>
+            <th scope="row"><%= item.id %></th>
+            <td><%= link_to item.name, admin_item_path(item.id), class: "text-decoration-underline text-black" %></td>
+            <td><%= item.price %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+      <%= paginate @items %>
+    </div>
+  </div>
+</div>
