--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+  <h4 class="p-3 mb-5 ms-5 col">
+    <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;商品一覧&nbsp;&nbsp;&nbsp;</b></span>
+  </h4>
+
+  <div class="row">
+    <div class="col-5">
+      <%= image_tag @item.image, size: "250x250" %>
+    </div>
+    <div class="col-1">
+      <p class="mb-5">商品名</p>
+      <p class="mb-5">商品説明</p>
+      <p class="mb-5">税込価格(税抜価格)</p>
+    </div>
+    <div class="col-5">
+      <p class="mb-5"><%= @item.name %></p>
+      <p class="mb-5"><%= @item.introduction %></p>
+      <p class="mb-5"><%= (@item.price*1.08).to_i %>(<%= @item.price %>)<span>円</span></p>
+    </div>
+  </div>
+  <div class="row justify-content-center"><%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success col-3" %></div>
+</div>
