[Add] public/items index,public/items show

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <h4 class="p-3 mb-2">
-  <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;ログイン&nbsp;&nbsp;&nbsp;</b></span>
+  <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;商品新規登録&nbsp;&nbsp;&nbsp;</b></span>
 </h4>
 
 <%= form_with model: @item, url: admin_items_path, method: :post, local: true do |f| %>
