--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,25 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-5 mt-5">
+      <%= image_tag @item.image, size: "250x250" %>
+    </div>
+    <div class="col-7 mt-5">
+      <%= form_with model: @cart_item, url: cart_items_path, method: :create do |f| %>
+      <h2><b><%= @item.name %></b></h2>
+      <h5 class="mt-3 mb-5"><%= @item.introduction %></h5>
+      <h2 class="mt-5 d-inline">￥<%= (@item.price*1.08).to_i %></h2><span>(税込)</span>
+      <div class="row col-6 mt-5">
+        <div class="col-6">
+          <%= f.hidden_field :item, :value => "@item.name" %>
+          <%= f.select :amount, *[1..3], include_blank: "個数選択", class: "form-control" %>
+        </div>
+        <div class="col-3">
+          <%= f.submit "カートに入れる", class: "btn btn-success" %>
+        </div>
+      </div>
+      <% end %>
+      </div>
+    </div>
+  </div>
+
+</div>
