--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h4 class="p-3 mb-5 ms-5 col">
-    <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;商品一覧&nbsp;&nbsp;&nbsp;</b></span>
+    <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;商品詳細&nbsp;&nbsp;&nbsp;</b></span>
   </h4>
 
   <div class="row">
