--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,29 @@
 <%= image_tag "nagano_cake/top_image.jpg", class: "img-fluid rounded mx-auto mt-3 d-block", alt: "sample_image" %>
 
 <div class="col-6 border mx-auto mt-5 py-5 border-dark text-center"><p><b>ようこそ、ながのCAKEへ!<br>このサイトは、ケーキ販売のECサイトになります。<br>会員でない方も商品の閲覧はできますが、<br>購入には会員登録が必要になります。</b></p></div>
+
+<div class="row">
+<h2 class="col-6 my-5 ms-4">新着商品</h2>
+</div>
+<div class="row">
+    <% @items.each do |item| %>
+      <div class="col-3">
+        <div class="row col-12 ms-1">
+          <%= link_to item_path(item.id) do %>
+            <%= image_tag item.image, size: "250x250" %>
+          <% end %>
+        </div>
+        <div class="row col-12 ms-3">
+          <%= item.name %>
+        </div>
+        <div class="row col-12 ms-1">
+          <span>￥<%= (item.price*1.08).to_i %></span>
+        </div>
+      </div>
+    <% end %>
+    <div class="row  justify-content-end">
+      <div class="col-auto">
+        <%= link_to "すべての商品を見る＞", items_path %>
+      </div>
+    </div>
+  </div>
