--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -4,14 +4,14 @@
       <%= image_tag @item.image, size: "250x250" %>
     </div>
     <div class="col-7 mt-5">
-      <%= form_with model: @cart_item, url: cart_items_path, method: :create do |f| %>
+      <%= form_with model: @cart_item, url: cart_items_create_path do |f| %>
       <h2><b><%= @item.name %></b></h2>
       <h5 class="mt-3 mb-5"><%= @item.introduction %></h5>
       <h2 class="mt-5 d-inline">￥<%= (@item.price*1.08).to_i %></h2><span>(税込)</span>
       <div class="row col-6 mt-5">
         <div class="col-6">
-          <%= f.hidden_field :item, :value => "@item.name" %>
-          <%= f.select :amount, *[1..3], include_blank: "個数選択", class: "form-control" %>
+          <%= f.hidden_field :item_id, value: @item.id %>
+          <%= f.select :amount, (1..3).to_a, include_blank: "個数選択", class: "form-control", name: "cart_item[:amount]" %>
         </div>
         <div class="col-3">
           <%= f.submit "カートに入れる", class: "btn btn-success" %>
