[Add] public/order/new

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -3,7 +3,7 @@
       <h1 class="d-inline">商品一覧</h1><h4 class="d-inline">全<%= @items.count %>件</h4>
     </div>
   </div>
-  <div class="row">
+  <div class="row mt-5">
     <% @items.each do |item| %>
       <div class="col-3">
         <div class="row col-12 ms-1">
