--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -56,6 +56,6 @@
 
 <div class="row mt-5">
   <div class="mx-auto text-center">
-    <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+    <%= link_to "情報入力に進む", orders_new_path, class: "btn btn-success" %>
   </div>
 </div>
