--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+<div class="position-relative">
+</div>
+<div class="position-absolute top-50 start-50 translate-middle">
+  <h4>ご注文ありがとうございました!</h4>
+</div>
