--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -70,5 +70,13 @@
   </div>
 </div>
 <div class="d-flex justify-content-center">
-  <%= link_to "注文を確定する", create_orders_path, method: :post, class: "btn btn-success" %>
+  <%= form_with model: @order, url: create_orders_path, method: :post do |f| %>
+    <%= f.hidden_field :postal_code, value: @order.postal_code %>
+    <%= f.hidden_field :address, value: @order.address %>
+    <%= f.hidden_field :name, value: @order.name %>
+    <%= f.hidden_field :payment_status, value: @order.payment_status %>
+    <%= f.hidden_field :customer_id, value: current_customer.id %>
+    <%= f.hidden_field :total_payment, value: @order.total_payment %>
+    <%= f.submit "注文を確定する",  class: "btn btn-success" %>
+  <% end %>
 </div>
