--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">注文日</th>
+            <th scope="col">配送先</th>
+            <th scope="col">注文商品</th>
+            <th scope="col">支払金額</th>
+            <th scope="col">注文詳細</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.created_at %></td>
+            <td><%= order.postal_code %><%= order.address %><%= order.name %></td>
+            <td>
+              <% order.order_items.each do |order_item| %>
+                <%= order_item.item.name %>
+              <% end %>
+            </td>
+            <td><%= order.total_payment %></td>
+            <td>@mdo</td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
