--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,8 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-10">
+  <div class="col-8">
+    <h4 class="p-3 mb-2 mt-5 ms-5 col">
+      <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;注文履歴一覧&nbsp;&nbsp;&nbsp;</b></span>
+    </h4>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-11 mt-4">
       <table class="table table-bordered">
-        <thead>
+        <thead class="table-secondary">
           <tr>
             <th scope="col">注文日</th>
             <th scope="col">配送先</th>
@@ -14,15 +21,15 @@
         <tbody>
           <% @orders.each do |order| %>
           <tr>
-            <td><%= order.created_at %></td>
-            <td><%= order.postal_code %><%= order.address %><%= order.name %></td>
+            <td><%= order.created_at.strftime("%Y/%m/%d") %></td>
+            <td>〒<%= order.postal_code %><br><%= order.address %><br><%= order.name %></td>
             <td>
               <% order.order_items.each do |order_item| %>
                 <%= order_item.item.name %>
               <% end %>
             </td>
-            <td><%= order.total_payment %></td>
-            <td>@mdo</td>
+            <td><%= (order.total_payment+order.shipping) %></td>
+            <td><%= link_to "表示する", order_path(order.id), class: "btn btn-primary" %></td>
           </tr>
           <% end %>
         </tbody>
