--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,33 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="row">
+  <div class="col-8">
+    <h4 class="p-3 mb-2 mt-5 ms-5 col">
+      <span class="bg-body-secondary"><b>&nbsp;&nbsp;&nbsp;注文履歴一覧&nbsp;&nbsp;&nbsp;</b></span>
+    </h4>
+  </div>
+</div>
+
+<div class="col-10 mx-auto mt-5">
+<table class="table">
+  <thead class="table-active">
+    <tr>
+      <th scope="col">購入日時</th>
+      <th scope="col">購入者</th>
+      <th scope="col">注文個数</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+    <tr>
+      <td>
+        <%= link_to admin_order_path(order.id), class: "text-black" do %>
+          <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+        <% end %>
+        </td>
+      <td><%= order.name %></td>
+      <% total_amount = order.order_items.sum(:amount) %>
+      <td><%= total_amount %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+</div>
