--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -41,7 +41,7 @@
 
   <div class="row">
     <div class="col-md-4">
-      <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
     </div>
     <div class="col-md-4 offset-md-4">
       <table class="table table-bordered col-12">
