--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -25,7 +25,7 @@
             <td>〒<%= order.postal_code %><br><%= order.address %><br><%= order.name %></td>
             <td>
               <% order.order_items.each do |order_item| %>
-                <%= order_item.item.name %>
+                <%= order_item.item.name %><br>
               <% end %>
             </td>
             <td><%= (order.total_payment+order.shipping) %></td>
