--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -23,7 +23,13 @@
   <% @cart_items.each do |cart_item| %>
   <tbody>
     <tr>
-      <th class="col-2"><span><%= image_tag cart_item.item.image, size: "50x50" %></span><span><%= cart_item.item.name %></span></th>
+      <th class="col-2">
+        <span>
+          <%= link_to item_path(cart_item.item.id) do %>
+            <%= image_tag cart_item.item.image, size: "50x50" %>
+          <% end %>
+        </span>
+        <span><%= cart_item.item.name %></span></th>
       <td><%= (cart_item.item.price*1.08).to_i %></td>
       <td><%= form_with model: cart_item,url: cart_item_update_path(cart_item.id), local: true do |f| %>
             <%= f.select :amount, *[0..30] %>
@@ -55,7 +61,9 @@
 </div>
 
 <div class="row mt-5">
+  <% unless @cart_items.empty? %>
   <div class="mx-auto text-center">
     <%= link_to "情報入力に進む", orders_new_path, class: "btn btn-success" %>
   </div>
+  <% end %>
 </div>
