--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -13,7 +13,7 @@
           <%= f.hidden_field :item_id, value: @item.id %>
           <%= f.hidden_field :name, value: @item.name %>
           <%= f.hidden_field :customer_id, value: current_customer.id %>
-          <%= f.select :amount, (1..3).to_a, include_blank: "個数選択", class: "form-control", name: "cart_item[:amount]" %>
+          <%= f.select :amount, (1..10).to_a, class: "form-control", name: "cart_item[:amount]" %>
         </div>
         <div class="col-3">
           <%= f.submit "カートに入れる", class: "btn btn-success" %>
