--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col text-center">
       <%= link_to "退会しない", customer_path(current_customer), class: "btn btn-primary col-2 me-4" %>
-      <%= f.submit "退会する", class: "btn btn-danger col-2" %>
+      <%= f.submit "退会する", class: "btn btn-danger col-2", "data-confirm" => "本当に削除しますか？"  %>
     </div>
   </div>
 
